# lingmo-platform

./: CMakeLists.txt
.github/workflows/: build.yml  package.yml
debian/: changelog  control  copyright
plugins/decoration/: CMakeLists.txt
plugins/roundedwindow_Legacy/: CMakeLists.txt
rpm/: lingmo-platform.spec
